added time blocks

--- a/index.html
+++ b/index.html
@@ -30,6 +30,76 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+<!-- div for each hour -->
+      <div id="hourOne" class="row time-block">
+        <div class="col-md-1 hour">8:00 AM</div>
+        <textarea class="col-md-10 description">
+        </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="hourTwo" class="time-block">
+        <div class="col-md-1 hour">9:00 AM</div>
+        <textarea class="col-md-10 description">
+        </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="hourThree" class="time-block">
+        <div class="col-md-1 hour">10:00 AM</div>
+        <textarea class="col-md-10 description">
+        </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="hourFour" class="time-block">
+        <div class="col-md-1 hour">11:00 AM</div>
+        <textarea class="col-md-10 description">
+        </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="hourFive" class="time-block">
+        <div class="col-md-1 hour">12:00 PM</div>
+        <textarea class="col-md-10 description">
+        </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="hourSix" class="time-block">
+        <div class="col-md-1 hour">1:00 PM</div>
+        <textarea class="col-md-10 description">
+        </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="hourSeven" class="time-block">
+        <div class="col-md-1 hour">2:00 PM</div>
+        <textarea class="col-md-10 description">
+        </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="hourEight" class="time-block">
+        <div class="col-md-1 hour">3:00 PM</div>
+        <textarea class="col-md-10 description">
+        </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="hourNine" class="time-block">
+        <div class="col-md-1 hour">4:00 PM</div>
+        <textarea class="col-md-10 description">
+        </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="hourTen" class="time-block">
+        <div class="col-md-1 hour">5:00 PM</div>
+        <textarea class="col-md-10 description">
+        </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
 
 
     </div>
